TranslationMethods/3rdLab/src/grammar/GoodImpLangParser.java
// Generated from C:/Users/User/ITMO/TranslationMethods/3rdLab/src/grammar\GoodImpLang.g4 by ANTLR 4.7.2
package grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GoodImpLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, DOT=2, COMMA=3, OPEN_BRACKET=4, CLOSE_BRACKET=5, OPEN_SCOPE=6, 
		CLOSE_SCOPE=7, LINE_SEPARATOR=8, NUMBER=9, DOUBLE=10, STRING=11, BOOL=12, 
		IF=13, WHILE=14, FOR=15, IN=16, FUN=17, RETURN=18, MULTIPLY=19, DIVIDE=20, 
		PLUS=21, MINUS=22, MODULE=23, ASSIGN=24, AND=25, OR=26, XOR=27, NOT=28, 
		LESS_OP=29, MORE_OP=30, LESS_OR_EQUAL=31, MORE_OR_EQUAL=32, EQUALS=33, 
		NOT_EQUALS=34, INT_TYPE=35, LONG_TYPE=36, BOOL_TYPE=37, STRING_TYPE=38, 
		DOUBLE_TYPE=39, NEXT_INT=40, NEXT_LONG=41, NEXT_BOOL=42, NEXT_DOUBLE=43, 
		NEXT_LINE=44, PRINT=45, IDENTIFIER=46, WHITESPACE=47;
	public static final int
		RULE_program = 0, RULE_expressions = 1, RULE_expression = 2, RULE_functionDeclaration = 3, 
		RULE_line = 4, RULE_functionName = 5, RULE_type = 6, RULE_scope = 7, RULE_returnStatement = 8, 
		RULE_args = 9, RULE_multiArgs = 10, RULE_multiArg = 11, RULE_arg = 12, 
		RULE_flow = 13, RULE_declaration = 14, RULE_assignment = 15, RULE_function = 16, 
		RULE_fargs = 17, RULE_farg = 18, RULE_multifargs = 19, RULE_multifarg = 20, 
		RULE_operation = 21, RULE_value = 22, RULE_literal = 23, RULE_numberLiteral = 24, 
		RULE_doubleLiteral = 25, RULE_boolLiteral = 26, RULE_stringLiteral = 27, 
		RULE_name = 28, RULE_ifStatement = 29, RULE_whileLoop = 30, RULE_forLoop = 31, 
		RULE_statement = 32, RULE_predicate = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expressions", "expression", "functionDeclaration", "line", 
			"functionName", "type", "scope", "returnStatement", "args", "multiArgs", 
			"multiArg", "arg", "flow", "declaration", "assignment", "function", "fargs", 
			"farg", "multifargs", "multifarg", "operation", "value", "literal", "numberLiteral", 
			"doubleLiteral", "boolLiteral", "stringLiteral", "name", "ifStatement", 
			"whileLoop", "forLoop", "statement", "predicate"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'.'", "','", "'('", "')'", "'{'", "'}'", "'\n'", null, 
			null, null, null, "'if'", "'while'", "'for'", "'in'", "'fun'", "'return'", 
			"'*'", "'/'", "'+'", "'-'", "'%'", null, null, null, null, null, null, 
			null, null, null, null, null, "'Int'", "'Long'", "'Bool'", "'String'", 
			"'Double'", "'nextInt'", "'nextLong'", "'nextBool'", "'nextDouble'", 
			"'nextLine'", "'print'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "DOT", "COMMA", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_SCOPE", 
			"CLOSE_SCOPE", "LINE_SEPARATOR", "NUMBER", "DOUBLE", "STRING", "BOOL", 
			"IF", "WHILE", "FOR", "IN", "FUN", "RETURN", "MULTIPLY", "DIVIDE", "PLUS", 
			"MINUS", "MODULE", "ASSIGN", "AND", "OR", "XOR", "NOT", "LESS_OP", "MORE_OP", 
			"LESS_OR_EQUAL", "MORE_OR_EQUAL", "EQUALS", "NOT_EQUALS", "INT_TYPE", 
			"LONG_TYPE", "BOOL_TYPE", "STRING_TYPE", "DOUBLE_TYPE", "NEXT_INT", "NEXT_LONG", 
			"NEXT_BOOL", "NEXT_DOUBLE", "NEXT_LINE", "PRINT", "IDENTIFIER", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GoodImpLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GoodImpLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GoodImpLangParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			expressions();
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionsContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterExpressions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitExpressions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitExpressions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionsContext expressions() throws RecognitionException {
		ExpressionsContext _localctx = new ExpressionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expressions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(71);
				expression();
				}
				}
				setState(74); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LINE_SEPARATOR) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << FUN) | (1L << NEXT_INT) | (1L << NEXT_LONG) | (1L << NEXT_BOOL) | (1L << NEXT_DOUBLE) | (1L << NEXT_LINE) | (1L << PRINT) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUN:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				functionDeclaration();
				}
				break;
			case LINE_SEPARATOR:
			case IF:
			case WHILE:
			case FOR:
			case NEXT_INT:
			case NEXT_LONG:
			case NEXT_BOOL:
			case NEXT_DOUBLE:
			case NEXT_LINE:
			case PRINT:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				line();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FUN() { return getToken(GoodImpLangParser.FUN, 0); }
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public TerminalNode OPEN_BRACKET() { return getToken(GoodImpLangParser.OPEN_BRACKET, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(GoodImpLangParser.CLOSE_BRACKET, 0); }
		public ScopeContext scope() {
			return getRuleContext(ScopeContext.class,0);
		}
		public TerminalNode COLON() { return getToken(GoodImpLangParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(FUN);
			setState(81);
			functionName();
			setState(82);
			match(OPEN_BRACKET);
			setState(83);
			args();
			setState(84);
			match(CLOSE_BRACKET);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(85);
				match(COLON);
				setState(86);
				type();
				}
			}

			setState(89);
			scope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public FlowContext flow() {
			return getRuleContext(FlowContext.class,0);
		}
		public TerminalNode LINE_SEPARATOR() { return getToken(GoodImpLangParser.LINE_SEPARATOR, 0); }
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_line);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case WHILE:
			case FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				flow();
				}
				break;
			case LINE_SEPARATOR:
			case NEXT_INT:
			case NEXT_LONG:
			case NEXT_BOOL:
			case NEXT_DOUBLE:
			case NEXT_LINE:
			case PRINT:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(96);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					}
					break;
				case 2:
					{
					setState(93);
					declaration();
					}
					break;
				case 3:
					{
					setState(94);
					assignment();
					}
					break;
				case 4:
					{
					setState(95);
					function();
					}
					break;
				}
				setState(98);
				match(LINE_SEPARATOR);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionNameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(GoodImpLangParser.IDENTIFIER, 0); }
		public TerminalNode NEXT_INT() { return getToken(GoodImpLangParser.NEXT_INT, 0); }
		public TerminalNode NEXT_BOOL() { return getToken(GoodImpLangParser.NEXT_BOOL, 0); }
		public TerminalNode NEXT_LONG() { return getToken(GoodImpLangParser.NEXT_LONG, 0); }
		public TerminalNode NEXT_DOUBLE() { return getToken(GoodImpLangParser.NEXT_DOUBLE, 0); }
		public TerminalNode NEXT_LINE() { return getToken(GoodImpLangParser.NEXT_LINE, 0); }
		public TerminalNode PRINT() { return getToken(GoodImpLangParser.PRINT, 0); }
		public FunctionNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterFunctionName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitFunctionName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitFunctionName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionNameContext functionName() throws RecognitionException {
		FunctionNameContext _localctx = new FunctionNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NEXT_INT) | (1L << NEXT_LONG) | (1L << NEXT_BOOL) | (1L << NEXT_DOUBLE) | (1L << NEXT_LINE) | (1L << PRINT) | (1L << IDENTIFIER))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INT_TYPE() { return getToken(GoodImpLangParser.INT_TYPE, 0); }
		public TerminalNode LONG_TYPE() { return getToken(GoodImpLangParser.LONG_TYPE, 0); }
		public TerminalNode DOUBLE_TYPE() { return getToken(GoodImpLangParser.DOUBLE_TYPE, 0); }
		public TerminalNode BOOL_TYPE() { return getToken(GoodImpLangParser.BOOL_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(GoodImpLangParser.STRING_TYPE, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT_TYPE) | (1L << LONG_TYPE) | (1L << BOOL_TYPE) | (1L << STRING_TYPE) | (1L << DOUBLE_TYPE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopeContext extends ParserRuleContext {
		public TerminalNode OPEN_SCOPE() { return getToken(GoodImpLangParser.OPEN_SCOPE, 0); }
		public TerminalNode CLOSE_SCOPE() { return getToken(GoodImpLangParser.CLOSE_SCOPE, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<ReturnStatementContext> returnStatement() {
			return getRuleContexts(ReturnStatementContext.class);
		}
		public ReturnStatementContext returnStatement(int i) {
			return getRuleContext(ReturnStatementContext.class,i);
		}
		public List<TerminalNode> LINE_SEPARATOR() { return getTokens(GoodImpLangParser.LINE_SEPARATOR); }
		public TerminalNode LINE_SEPARATOR(int i) {
			return getToken(GoodImpLangParser.LINE_SEPARATOR, i);
		}
		public ScopeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scope; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterScope(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitScope(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitScope(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScopeContext scope() throws RecognitionException {
		ScopeContext _localctx = new ScopeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_scope);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(OPEN_SCOPE);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LINE_SEPARATOR) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << NEXT_INT) | (1L << NEXT_LONG) | (1L << NEXT_BOOL) | (1L << NEXT_DOUBLE) | (1L << NEXT_LINE) | (1L << PRINT) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(110);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LINE_SEPARATOR:
				case IF:
				case WHILE:
				case FOR:
				case NEXT_INT:
				case NEXT_LONG:
				case NEXT_BOOL:
				case NEXT_DOUBLE:
				case NEXT_LINE:
				case PRINT:
				case IDENTIFIER:
					{
					setState(106);
					line();
					}
					break;
				case RETURN:
					{
					{
					setState(107);
					returnStatement();
					setState(108);
					match(LINE_SEPARATOR);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(115);
			match(CLOSE_SCOPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(GoodImpLangParser.RETURN, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitReturnStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitReturnStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(RETURN);
			setState(118);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public ArgContext arg() {
			return getRuleContext(ArgContext.class,0);
		}
		public MultiArgsContext multiArgs() {
			return getRuleContext(MultiArgsContext.class,0);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GoodImpLangListener ) ((GoodImpLangListener)listener).exitArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GoodImpLangVisitor ) return ((GoodImpLangVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_args);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				arg();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(122);
				multiArgs();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
